fix panel fullscreen/collapse buttons

--- a/public_static/styles/layout.less
+++ b/public_static/styles/layout.less
@@ -187,7 +187,8 @@ body {
         #panel-handle {
             .box-shadow(0 0 6px rgba(0, 0, 0, .8));
             top: -8px;
-            padding: 0 16px;
+            padding: 2px 16px;
+            line-height: 0;
             background-color: #000;
             position: absolute;
             color: @white;
@@ -206,7 +207,7 @@ body {
 
         #panel-full {
             right: 70px;
-            padding: 0 4px;
+            padding: 2px 4px;
             font-size: 20px;
         }
 
